ci: fix github get owner syntax

--- a/.github/container-workflow.yml
+++ b/.github/container-workflow.yml
@@ -6,7 +6,7 @@ on:
       - '*'
 
 env:
-    USERNAME: ${{ github.event.repository.owner.login }}
+    USERNAME: ${{ github.actor }}
     CR_PAT: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
