--- a/.github/workflow/container-workflow.yml
+++ b/.github/workflow/container-workflow.yml
@@ -1,7 +1,9 @@
+name: Application Kubernetes Release
+
 on:
   push:
-    branch:
-      - '!main'
+    branch-ignore:
+      - 'main'
     tags:
       - '*'
 
