--- a/.github/workflows/container-workflow.yml
+++ b/.github/workflows/container-workflow.yml
@@ -26,10 +26,10 @@ jobs:
       - name: Login GHCR
         run: echo $CR_PAT | docker login ghcr.io -u $USERNAME --password-stdin
       - name: Docker Build Image tags
-        run: docker build -f dockerfile -t "$GITHUB_REPOSITORY:${{ steps.branch_name.outputs.SOURCE_TAG }}" .
+        run: docker build -f dockerfile -t "ghcr.io/$GITHUB_REPOSITORY:${{ steps.branch_name.outputs.SOURCE_TAG }}" .
       - name: Push to ghcr.io tags
-        run: docker push $GITHUB_REPOSITORY:${{ steps.branch_name.outputs.SOURCE_TAG }}
+        run: docker push ghcr.io/$GITHUB_REPOSITORY:${{ steps.branch_name.outputs.SOURCE_TAG }}
       - name: Docker Build Image Latest
-        run: docker build -f dockerfile -t "$GITHUB_REPOSITORY:latest" .
+        run: docker build -f dockerfile -t "ghcr.io/$GITHUB_REPOSITORY:latest" .
       - name: Push to ghcr.io latest
-        run: docker push $GITHUB_REPOSITORY:latest
+        run: docker push ghcr.io/$GITHUB_REPOSITORY:latest
