--- a/2-fluxcd/deployments/deployment.yml
+++ b/2-fluxcd/deployments/deployment.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: helloworld-deployment
+  namespace: demo
   labels:
     app: helloworld
     test: test
